<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.AMazeActivity"
    android:background="@drawable/background"
    >


    #text box that replaces text - get value and call textbox.settext

    <TextView
        android:id="@+id/welcome"
        android:layout_width="334dp"
        android:layout_height="69dp"
        android:text="@string/welcome"
        android:textSize="43sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="86dp" />

    <TextView
        android:id="@+id/Dorothy"
        android:layout_width="195dp"
        android:layout_height="86dp"
        android:text="@string/Dorothy"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="194dp" />

    <TextView
        android:id="@+id/level"
        android:layout_width="151dp"
        android:layout_height="38dp"
        android:text="@string/level"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="511dp" />


    <TextView
        android:id="@+id/rooms"
        android:layout_width="151dp"
        android:layout_height="38dp"
        android:text="@string/rooms"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="346dp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="336dp"
        android:layout_height="18dp"
        android:layout_marginStart="40dp"
        android:max="9"
        android:progress="7"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="549dp" />

    <Button
        android:id="@+id/explore_button"
        android:layout_width="122dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/explore_b"
        android:onClick="onClick"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="578dp" />

    <Button
        android:id="@+id/revisit_button"
        android:layout_width="123dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/revisit_b"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="647dp" />

    <Button
        android:id="@+id/yes_button"
        android:layout_width="63dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/yes"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="344dp" />

    <Button
        android:id="@+id/no_button"
        android:layout_width="57dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/no"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="289dp"
        tools:layout_editor_absoluteY="344dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:hint="@string/builder"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="392dp">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="321dp"
        android:layout_height="43dp"
        android:hint="@string/player"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="458dp">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

